faire partie html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>🍪 Le créateur de Cookies 🍪</h1>   
+    <input type="text" name="cookieName" value="pull">
+    <input type="text" name="cookieValue" value="50">
+    <input type="date" name="cookieExpire">
 
+    <div class="container-btns">
+        <button data-cookie="creer" class="btn1">Créer</button>
+        <button data-cookie="toutAfficher" class="btn2">Afficher</button>
+    </div>
 
+    <p class="info-suppr"></p>
+    <ul class="affichage"></ul>
 
     <script src="app.js"></script>
 </body>
