--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button data-cookie="toutAfficher" class="btn2">Afficher</button>
     </div>
 
-    <p class="info-suppr"></p>
+    <p class="info-txt"></p>
     <ul class="affichage"></ul>
 
     <script src="app.js"></script>
